# stockapp_2

./: test_token.db
app/: .gitignore  main.py  pyproject.toml
app/backend/: alembic.ini
app/backend/account/: auth.py
app/backend/auth/: db.py  dependencies.py  routes.py  schema.py  tokens.py
app/backend/core/: auth_handler.py  cryptography.py  hashing.py  settings.py
app/backend/db/: database.py  refresh_token.py
app/backend/migrations/: env.py  script.py.mako
app/backend/migrations/versions/: 0929690f159f_refactored_orders.py  114176876963_removed_token_table.py  19a0ad5cc27a_initial_migration.py  1b8b5d50a35f_removed_hashed_secret_key.py  2f92645f5311_added_relationship_between_user_and_.py  (+8 more)
app/backend/models/: models.py
app/backend/routes/: auth.py  debug.py  pages.py  user.py
app/backend/services/: alpacaService.py  db.py  dependencies.py  routes.py  schema.py
app/frontend/static/: error.css  script.js  styles.css
app/frontend/templates/: base_template.html  dashboard.html  error.html  index.html  login_page.html  profile.html  signup_page.html
app/tests/: test_auth_endpoints.py  test_auth_token.py  test_jwt_utils.py
backend/: .gitignore  main.py  pyproject.toml
backend/account/: auth.py  password.py
backend/core/: auth_handler.py  hashing.py  settings.py
backend/db/: database.py  refresh_token.py
backend/migrations/: env.py
backend/migrations/versions/: 36bc8f2a74fc_add_refreshtoken_table.py  4c4e4f18a6c8_initial_migration.py  b397e220c539_new_base_model.py
backend/models/: models.py  user.py
backend/routes/: auth.py
(+16 files in other folders)
